# rotary-permutator

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
examples/: char_example.rs  enum_example.rs
rotary-permutator-derive/: Cargo.toml
rotary-permutator-derive/src/: lib.rs
src/: char_rotor.rs  lib.rs
