[package]
name = "rotary-permutator"
version = "0.1.11"
edition = "2024"
license = "MIT"
description = "Permutations iterator"
repository = "https://github.com/ishrut/rotary-permutator"
homepage = "https://github.com/ishrut/rotary-permutator"
keywords = ["permutation", "combination", "generator", "rotary", "permutator"]

[dependencies]
rotary-permutator-derive = { version = "0.1.11" }
